--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,14 +1,22 @@
 pipeline {
-agent none
-stages {
-stage('Build){
 agent any
-options {
-	skipDefaultCheckout()
+stages {
+stage('Build master'){
+when{
+branch 'master'
 }
 steps {
-echo "Hello World"
+echo "Building maser"
+}
+}
+stage('Build dev'){
+when{
+branch 'dev'
+}
+steps {
+echo 'Building dev'
 }
 }
 }
 }
+
